[project]
name = "create-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiomcache[memcached]>=0.8.2",
    "httpx",
    "memcache[memcached]>=0.12.0",
    "pydantic",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]
