[project]
name = "pomdapi"
version = "0.1.0"
description = "lightweight, Pythonic solution for creating strongly-typed API clients"
readme = "README.md"
dependencies = [
    "aiomcache[memcached]>=0.8.2",
    "httpx",
    "memcache[memcached]>=0.12.0",
    "pydantic",
]
authors = [
    {name = "Jeremy Perez", email = "perezgemeinschaft@gmail.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.9",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet",
]
requires-python = '>=3.10'

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]
