[build-system]
requires = ["hatchling<1.19", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "pomdapi"
version = "0.1.1"
description = "lightweight, Pythonic solution for creating strongly-typed API clients"
readme = "README.md"
dependencies = [
    "httpx",
    "pydantic",
    "redis>=5.2.1",
]
authors = [
    {name = "Jeremy Perez", email = "perezgemeinschaft@gmail.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.9",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet",
]
requires-python = '>=3.10'

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocstrings>=0.27.0",
]

